# JackAITranslator

./: README.md  aitrans.toml  install.sh
aitrans/: Cargo.toml
aitrans/src/: config.rs  main.rs  ollama.rs  siliconflow.rs
