[package]
name = "aitrans"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.21", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.139"
config = "0.15.13"
log = "0.4.17"
env_logger = {version = "0.11.8", features = ["humantime"]}
pico-args = "0.5.0"